bug fixes in navbar presentation on mobile devices

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -900,7 +900,10 @@ div.panel {
     width: 90%;
     flex-basis: 30%; }
   .pg1-section5 .btn-a {
-    width: 30%; } }
+    width: 30%; }
+  footer span {
+    margin-right: none;
+    font-size: 0.625em; } }
 
 @media screen and (max-width: 680px) {
   ul.topnav li {
